--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25317 2025/01/14 19:30:15 wiz Exp $
+$NetBSD: TODO,v 1.25318 2025/01/15 12:28:38 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1034,6 +1034,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o packagekit-0.5.3
 	o pam-krb5-4.10
 	o pam-passwdqc-2.0.2
+	o pam-u2f-1.3.1
 	o papirus-folders-1.8.0
 	o parrot-8.1.0
 	o passenger-6.0.20
